Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
Equinix is shutting down its operations with us on April 30, 2025. They have graciously supported us for almost 5 years, but all good things come to an end. We are expecting to transition to new infrastructure between late March and mid-April. We do not yet have a firm timeline for this, but it will involve (probably multiple) periods of downtime as we move our services whilst also changing them to be faster and more responsive. Any updates will be posted in freedesktop/freedesktop#2011 as it becomes clear, and any downtime will be announced with further broadcast messages.
few tests - fail - Test assertion failure function xe_wait_ufence, Failed assertion: __xe_wait_ufence(fd, addr, value, exec_queue, &timeout) == 0, Last errno: 62, Timer expired
A CI Bug Log filter associated to this bug has been updated by Vinay.
Description: LNL PVC DG2: few tests - fail - Test assertion failure function xe_wait_ufence, Failed assertion: __xe_wait_ufence(fd, addr, value, exec_queue, &timeout) == 0, Last errno: 62, Timer expired
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "BMG", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-beng-cm-threads-large-multi-vm", "igt@xe_exec_compute_mode@many-rebind", "igt@xe_exec_fault_mode@many-rebind-imm", "igt@xe_evict@evict-cm-threads-large-multi-vm", "igt@xe_evict@evict-beng-cm-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-rebind", "igt@xe_exec_fault_mode@many-execqueues-rebind-prefetch", "igt@xe_exec_fault_mode@many-rebind-prefetch"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function xe_wait_ufence.*\n.*Failed assertion: __xe_wait_ufence\(fd, addr, value, exec_queue, &timeout\) == 0\n.*Last errno: 62, Timer expired'
A CI Bug Log filter associated to this bug has been updated by Vinay.
Description:BMG LNL PVC DG2: few tests - fail - Test assertion failure function xe_wait_ufence, Failed assertion: __xe_wait_ufence(fd, addr, value, exec_queue, &timeout) == 0, Last errno: 62, Timer expired
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "BMG", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_exec_compute_mode@many-rebind", "igt@xe_exec_fault_mode@many-rebind-imm", "igt@xe_evict@evict-cm-threads-large-multi-vm", "igt@xe_evict@evict-beng-cm-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-rebind", "igt@xe_exec_fault_mode@many-execqueues-rebind-prefetch", "igt@xe_exec_fault_mode@many-rebind-prefetch"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function xe_wait_ufence.*\n.*Failed assertion: __xe_wait_ufence\(fd, addr, value, exec_queue, &timeout\) == 0\n.*Last errno: 62, Timer expired'
A CI Bug Log filter associated to this bug has been updated by Vinay.
Description: BMG LNL PVC DG2: few tests - fail - Test assertion failure function xe_wait_ufence, Failed assertion: __xe_wait_ufence(fd, addr, value, exec_queue, &timeout) == 0, Last errno: 62, Timer expired
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "BMG", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_exec_compute_mode@many-rebind", "igt@xe_exec_fault_mode@many-rebind-imm", "igt@xe_evict@evict-cm-threads-large-multi-vm", "igt@xe_evict@evict-beng-cm-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-rebind-imm", "igt@xe_exec_fault_mode@many-execqueues-rebind", "igt@xe_exec_fault_mode@many-rebind", "igt@xe_exec_fault_mode@many-execqueues-rebind-prefetch", "igt@xe_exec_fault_mode@many-rebind-prefetch"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function xe_wait_ufence.*\n.*Failed assertion: __xe_wait_ufence\(fd, addr, value, exec_queue, &timeout\) == 0\n.*Last errno: 62, Timer expired'
A CI Bug Log filter associated to this bug has been updated by Vinay.
Description: BMG LNL PVC DG2: few tests - fail - Test assertion failure function xe_wait_ufence, Failed assertion: __xe_wait_ufence(fd, addr, value, exec_queue, &timeout) == 0, Last errno: 62, Timer expired
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "BMG", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_exec_compute_mode@many-rebind", "igt@xe_exec_fault_mode@many-rebind-imm", "igt@xe_evict@evict-cm-threads-large-multi-vm", "igt@xe_evict@evict-beng-cm-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-rebind-imm", "igt@xe_exec_fault_mode@twice-bindexecqueue-rebind", "igt@xe_evict@evict-beng-mixed-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-userptr-rebind", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-userptr-rebind-imm", "igt@xe_exec_fault_mode@many-execqueues-rebind", "igt@xe_exec_fault_mode@many-rebind", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-userptr-rebind-prefetch", "igt@xe_evict@evict-mixed-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-rebind", "igt@xe_exec_fault_mode@many-execqueues-rebind-prefetch", "igt@xe_exec_fault_mode@many-rebind-prefetch"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function xe_wait_ufence.*\n.*Failed assertion: __xe_wait_ufence\(fd, addr, value, exec_queue, &timeout\) == 0\n.*Last errno: 62, Timer expired'
A CI Bug Log filter associated to this bug has been updated by tillipix.
Description: BMG LNL PVC DG2: few tests - fail - Test assertion failure function xe_wait_ufence, Failed assertion: __xe_wait_ufence(fd, addr, value, exec_queue, &timeout) == 0, Last errno: 62, Timer expired
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "BMG", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_exec_compute_mode@many-rebind", "igt@xe_exec_fault_mode@many-rebind-imm", "igt@xe_evict@evict-cm-threads-large-multi-vm", "igt@xe_evict@evict-beng-cm-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-rebind-imm", "igt@xe_exec_fault_mode@twice-bindexecqueue-rebind", "igt@xe_evict@evict-beng-mixed-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-userptr-rebind", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-userptr-rebind-imm", "igt@xe_exec_compute_mode@twice-userptr-invalidate-race", "igt@xe_exec_fault_mode@many-execqueues-rebind", "igt@xe_exec_fault_mode@many-rebind", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-userptr-rebind-prefetch", "igt@xe_evict@evict-mixed-threads-large-multi-vm", "igt@xe_exec_fault_mode@many-execqueues-bindexecqueue-rebind", "igt@xe_exec_fault_mode@many-execqueues-rebind-prefetch", "igt@xe_exec_fault_mode@many-rebind-prefetch", "igt@xe_exec_mix_modes@exec-spinner-interrupted-dma-fence"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function xe_wait_ufence.*\n.*Failed assertion: __xe_wait_ufence\(fd, addr, value, exec_queue, &timeout\) == 0\n.*Last errno: 62, Timer expired'